--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto Redes Sociais</title>
+    
 
 </head>
 <body>
@@ -16,9 +17,10 @@
         </section>
         <section id="redes-sociais">
             <a href="#" target="tela"> <img src="imagens/logo-home.jpg" alt="home"></a><BR></BR>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a><BR></BR>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><BR></BR>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
+            <a href="instagran.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a><BR></BR>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><BR></BR>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a><br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><BR></BR>
         </section>
     </main>
 </body>
